# c4os

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json
.agents/: AGENTS.md
.task-bank/: brief.md  conventions.md  decisions.md  manifest.md  outputs.md  progress.csv
backend/: Cargo.toml  README.md  build.rs  tauri.conf.json
backend/src/: commands.rs  extensions.rs  files.rs  lib.rs  main.rs  menu.rs  mock_data.rs  native_browser.rs  openrouter.rs  provider_models.rs  records.rs  runtime_adapter.rs  runtime_sessions.rs  security.rs  terminal_pty.rs  tool_gateway.rs  workspace.rs
frontend/: app.js  connector-contract.js  connectors.js  data.js  dom.js  icons.js  index.html  interactions.js  markdown.js  state.js  styles.css
plans/: AGENTS.md  preplan-brief.md  product-brief.md  product-interface.md
scripts/: build.mjs  dev-server.mjs  generate-icon.mjs  run-backend.js
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: action_classifier.rs  approval.rs  approval_prompt.rs  artifact.rs  credentials.rs  event_normalizer.rs  export.rs  file_browser.rs  file_tools.rs  instruction_preflight.rs  lib.rs  main.rs  mcp.rs  path_resolver.rs  project.rs  project_selector.rs  provider.rs  recovery_view.rs  runtime.rs  runtime_control.rs  session_allow.rs  session_catalog.rs  session_view.rs  shell_executor.rs  shell_summary.rs  skills.rs  storage.rs  tool_timeline.rs
tests/: backend-command-boundary.test.mjs  dev-server.test.mjs  frontend-connectors.test.js  frontend-r04.test.js  frontend-task-002.test.js  frontend-task-004.test.js  frontend-task-005.test.js  (+15 more)
(+591 files in other folders)
