[package]
name = "c4os-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "c4os_backend"
path = "src/lib.rs"

[[bin]]
name = "c4os-backend"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2.6.2"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.11.2"
