[package]
name = "c4os-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "c4os_backend"
path = "src/lib.rs"

[[bin]]
name = "c4os-backend"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
raw-window-handle = "0.6"
tauri = { version = "2.11.2", features = [] }
wry = "0.55.1"
portable-pty = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSResponder", "NSView", "NSWindow"] }
