[package]
name = "c4os"
version = "0.1.0"
description = "C4OS desktop control center"
authors = ["C4OS"]
edition = "2021"

[lib]
name = "c4os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
